<resources>
    <string name="app_name">HowYo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nothing">nothing</string>

    <!-- Display time-->
    <string name="seconds_ago">%s秒前</string>
    <string name="minutes_ago">%s分鐘前</string>
    <string name="hours_ago">%s小時前</string>
    <string name="days_ago">%s天前</string>
    <string name="weeks_ago">%s周前</string>
    <string name="months_ago">%s個月前</string>
    <string name="years_ago">%s年前</string>

    <!-- General -->
    <string name="discover">探索</string>
    <string name="favorite">收藏行程</string>
    <string name="notification">通知</string>
    <string name="shopping_list">購物清單</string>
    <string name="group_message">群組聊天</string>
    <string name="check_list">行李清單</string>
    <string name="new_item">新增項目</string>
    <string name="user_name">暱稱</string>
    <string name="user_info">個人簡介</string>
    <string name="payment">款項清單</string>
    <string name="add_payment">新增款項</string>
    <string name="delete">刪除</string>
    <string name="payment_detail">款項資訊</string>
    <string name="companion_location">旅伴位置</string>
    <string name="find_location">尋找景點</string>
    <string name="setting">設定</string>
    <string name="comment">評論</string>
    <string name="save_setting">儲存</string>
    <string name="save_uploading">建立中</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="locating">正在提供您的位置給旅伴</string>
    <string name="back_to_app">返回HowYo</string>
    <string name="search">搜尋</string>
    <string name="duration_with_dash">%s - %s</string>

    <!-- Home-->
    <string name="empty_home">好友目前沒有公開行程唷！</string>

    <!-- Plan Cover-->
    <string name="plan_new">新增行程</string>
    <string name="plan_edit">編輯行程</string>
    <string name="plan_copy">複製行程</string>
    <string name="plan_name">行程名稱</string>
    <string name="plan_date_range">旅程區間</string>
    <string name="plan_save">儲存</string>
    <string name="select_plan_duration">選擇旅程日期區間</string>

    <!-- Plan-->
    <string name="default_cover">android.resource://com.yuchen.howyo/drawable/sample_cover</string>
    <string name="plan_public">public</string>
    <string name="plan_private">private</string>
    <string name="day">第%d天\n%S</string>
    <string name="confirm_delete_plan">您確定要移除 %s 嗎？</string>
    <string name="confirm_delete_day">您確定要移除第 %d 天嗎？</string>
    <string name="confirm_delete_schedule">您確定要移除行程嗎？</string>
    <string name="empty_schedule">選擇的日期沒有行程。\n點擊新增按鈕建立！</string>
    <string name="public_plan">公開旅遊計畫</string>
    <string name="set_public">公開</string>
    <string name="private_plan">私人旅遊計畫</string>
    <string name="set_private">隱藏</string>
    <string name="confirm_update_privacy">您確定要 %s 行程嗎？</string>
    <string name="schedule_time_duration">%s 時 %s 分</string>

    <!-- Plan Detail-->
    <string name="detail_edit_schedule_type">類別</string>
    <string name="detail_edit_schedule_notification">行程通知</string>
    <string name="detail_edit_schedule_title">標題</string>
    <string name="detail_edit_schedule_address">地址</string>
    <string name="detail_edit_schedule_start_time">開始時間</string>
    <string name="detail_edit_schedule_end_time">結束時間</string>
    <string name="detail_edit_schedule_remark">備註</string>
    <string name="detail_edit_schedule_budge">預算</string>
    <string name="detail_edit_schedule_ref_url">參考網址</string>
    <string name="select_schedule_type">選擇類別</string>
    <string name="air_flight">飛行計劃</string>
    <string name="traffic">交通</string>
    <string name="hotel">住宿</string>
    <string name="place">景點</string>
    <string name="food">美食</string>

    <!-- Payment-->
    <string name="payment_item">品項名稱</string>
    <string name="payment_amount">金額</string>
    <string name="payment_payer">付款人</string>
    <string name="payment_select_payer">選擇付款人</string>
    <string name="payment_type_self">個人費用</string>
    <string name="payment_type_self_value">self</string>
    <string name="payment_type_share">平均費用</string>
    <string name="payment_type_share_value">share</string>
    <string name="payment_confirm_delete">您確定要刪除此筆款項嗎？</string>
    <string name="payment_should_pay">應付</string>

    <!-- Profile-->
    <string name="profile_following">%d\n追蹤中</string>
    <string name="fans_tab">fans</string>
    <string name="following_tab">following</string>
    <string name="profile_fans">%d\n紛絲</string>
    <string name="profile_plans">%d\n行程</string>
    <string name="profile_modify_nick_name">顯示名稱</string>
    <string name="profile_modify_info">簡介</string>
    <string name="profile_follow_cancel">取消追蹤</string>
    <string name="profile_fans_remove">移除</string>

    <!-- Author Profile-->
    <string name="author_profile_follow">追蹤</string>
    <string name="author_profile_following">追蹤中</string>

    <!-- Notification-->
    <string name="notification_like_msg">說你的行程讚。</string>
    <string name="notification_like_type">like</string>
    <string name="notification_follow_msg">開始追蹤你。</string>
    <string name="notification_follow_type">follow</string>

    <!-- Group Msg-->
    <string name="type_message_here">輸入訊息</string>

    <!-- Favorite-->
    <string name="empty_favorite">目前沒有收藏行程唷！</string>

    <!-- Default subtype for check list-->
    <string name="check">check</string>
    <string name="shopping">shopping</string>
    <string name="necessary">necessary</string>
    <string name="necessary_title">必要物品</string>
    <string name="clothe">clothe</string>
    <string name="clothe_title">衣物</string>
    <string name="wash">wash</string>
    <string name="wash_title">盥洗用品</string>
    <string name="electronic">electronic</string>
    <string name="electronic_title">3C</string>
    <string name="health">health</string>
    <string name="health_title">健康</string>
    <string name="other">other</string>
    <string name="other_title">其他</string>
    <string name="confirm_reset_check_list">您確定要重置嗎？</string>
    
    <!-- Permissions-->
    <string name="request_location_permission_message">此應用程式，需要位置權限才能正常使用</string>
    <string name="check_gps_title">GPS 尚未開啟</string>
    <string name="check_gps_message">使用此功能需要開啟 GSP 定位功能</string>
    <string name="navigate_to_open_setting">前往開啟</string>

    <!-- Default check list category-->
    <string-array name="check_list">
        <item>necessary</item>
        <item>clothe</item>
        <item>wash</item>
        <item>electronic</item>
        <item>health</item>
        <item>other</item>
    </string-array>

    <!-- Default check list items-->
    <string-array name="necessary_list">
        <item>護照</item>
        <item>簽證</item>
        <item>登機證</item>
        <item>駕照</item>
        <item>旅平險</item>
        <item>外幣</item>
    </string-array>

    <string-array name="clothe_list">
        <item>內衣</item>
        <item>上衣</item>
        <item>睡衣</item>
        <item>褲子</item>
        <item>拖鞋</item>
        <item>外套</item>
    </string-array>

    <string-array name="wash_list">
        <item>牙刷</item>
        <item>牙膏</item>
        <item>毛巾</item>
        <item>化妝品</item>
        <item>乳液</item>
        <item>隱形眼鏡</item>
    </string-array>

    <string-array name="electronic_list">
        <item>手機</item>
        <item>SIM卡</item>
        <item>行動電源</item>
        <item>相機</item>
        <item>充電器</item>
        <item>插座轉接頭</item>
    </string-array>

    <string-array name="health_list">
        <item>藥物</item>
        <item>維他命</item>
        <item>急救用品</item>
    </string-array>

    <string-array name="other_list">
        <item>雨傘</item>
        <item>水壺</item>
        <item>餐具</item>
        <item>太陽眼鏡</item>
        <item>防曬乳</item>
    </string-array>

    <!-- Content Description-->
    <string name="content_desc_cover_photo">cover photo</string>
    <string name="content_desc_submit_message">submit group message</string>
    <string name="content_desc_search_icon">search icon</string>
    <string name="content_desc_schedule_type_icon">schedule type icon</string>
    <string name="content_desc_schedule_image">schedule image</string>
    <string name="content_desc_nav_to_companion">navigate to companion</string>
    <string name="content_desc_nav_to_map_mode">navigate to map mode</string>
    <string name="content_desc_add_new_schedule">add new schedule</string>
    <string name="content_desc_lock_plan">lock plan</string>
    <string name="content_desc_unlock_plan">unlock plan</string>
    <string name="content_desc_like_plan">like plan</string>
    <string name="content_desc_unlike_plan">unlike plan</string>
    <string name="content_desc_nav_to_comment">navigate to comment page</string>
    <string name="content_desc_collect_plan">collect plan</string>
    <string name="content_desc_not_collect_plan">not collect plan</string>
    <string name="content_desc_nav_to_copy_plan">navigate to copy plan page</string>
    <string name="content_desc_add_image">add image</string>
    <string name="content_desc_add_schedule_image">add schedule image</string>
    <string name="content_desc_delete_day">delete one of play days</string>
    <string name="content_desc_delete_schedule_photo">delete one of the schedule photos</string>
    <string name="content_desc_like_count">like counts</string>
    <string name="content_desc_app_logo">app logo</string>
    <string name="content_desc_submit_plan">submit plan</string>
    <string name="content_desc_submit_schedule">submit schedule</string>
    <string name="content_desc_browse_album">browse album</string>
    <string name="content_desc_reset_cover">reset cover</string>
    <string name="content_desc_take_photo">take photo</string>
    <string name="content_desc_close">close</string>
    <string name="content_desc_back">back</string>
    <string name="content_desc_expand">expand</string>
    <string name="content_desc_schedule_time">schedule time</string>
    <string name="content_desc_url_icon">url icon</string>
    <string name="content_desc_edit">edit</string>
    <string name="content_desc_edit_schedule_photo">edit schedule photo</string>
    <string name="content_desc_select_schedule_type">select schedule type</string>
    <string name="content_desc_friend_tab">friend tabs</string>
    <string name="content_desc_payer">payer</string>
    <string name="content_desc_submit_payment">submit payment</string>
    <string name="content_desc_shopping_list">shopping list</string>
    <string name="content_desc_check_list">luggage list</string>
    <string name="content_desc_share_plan">share plan</string>
    <string name="content_desc_edit_plan">edit plan</string>
    <string name="content_desc_companion_location">companion location</string>
    <string name="content_desc_nav_to_payment">navigate to payment</string>
    <string name="content_desc_nav_to_group_message">navigate to group message</string>
    <string name="content_desc_add_item">add shopping or luggage item</string>
    <string name="content_desc_delete_item">delete shopping or luggage item</string>
    <string name="content_desc_add_companion">add companion</string>
    <string name="content_desc_remove_companion">remove companion</string>
    <string name="content_desc_money_icon">money icon</string>
    <string name="content_desc_add_day">add a day in the plan</string>

</resources>