<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/notification"
        android:icon="@drawable/custom_bell"
        android:title="@string/notification"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/plus"
        android:icon="@drawable/custom_plus"
        android:title="@string/add_payment"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/custom_setting"
        android:title="@string/setting"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/save"
        android:visible="false"
        android:icon="@drawable/custom_save"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/custom_delete"
        android:visible="false"
        android:title="@string/delete"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/nothing"
        android:icon="@drawable/nothing"
        android:visible="false"
        android:title=""
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/resetCheckItem"
        android:icon="@drawable/custom_reset"
        android:visible="false"
        app:showAsAction="always|withText" />
</menu>