<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <import type="android.view.View" />

        <import type="com.yuchen.howyo.network.LoadApiStatus" />

        <variable
            name="viewModel"
            type="com.yuchen.howyo.plan.payment.paymentdetail.PaymentDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_f5f5f5"
        tools:context=".plan.payment.paymentdetail.PaymentDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.status == LoadApiStatus.LOADING ? View.GONE : View.VISIBLE}">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_payment_detail_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/middle_padding"
                android:layout_marginTop="@dimen/middle_padding"
                android:layout_marginEnd="@dimen/middle_padding"
                android:layout_marginBottom="@dimen/middle_padding"
                android:theme="@style/InputTextColorTheme"
                app:boxBackgroundColor="@{viewModel.invalidPayment != null? (TextUtils.isEmpty(viewModel.paymentItem) ? @color/scarlet : @color/matcha_3) : @color/matcha_3}"
                app:boxStrokeColor="@{viewModel.invalidPayment != null ? (TextUtils.isEmpty(viewModel.paymentItem) ? @color/scarlet : @color/matcha_3) : @color/matcha_3}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_payment_detail_item"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cover_plan_edittext"
                    android:backgroundTint="@{viewModel.invalidPayment != null? (TextUtils.isEmpty(viewModel.paymentItem) ? @color/scarlet : @color/matcha_3) : @color/matcha_3}"
                    android:hint="@string/payment_item"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={viewModel.paymentItem}"
                    android:textColor="@color/matcha_3"
                    android:textColorHint="@{viewModel.invalidPayment != null ? (TextUtils.isEmpty(viewModel.paymentItem) ? @color/scarlet : @color/matcha_3) : @color/matcha_3}"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_payment_detail_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/middle_padding"
                android:layout_marginTop="@dimen/middle_padding"
                android:layout_marginEnd="@dimen/middle_padding"
                android:layout_marginBottom="@dimen/middle_padding"
                android:theme="@style/InputTextColorTheme"
                app:boxBackgroundColor="@{viewModel.invalidPayment != null? @color/scarlet : @color/matcha_3}"
                app:boxStrokeColor="@{viewModel.invalidPayment != null ? @color/scarlet : @color/matcha_3}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_payment_detail_item">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_payment_detail_amount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cover_plan_edittext"
                    android:backgroundTint="@{viewModel.invalidPayment != null? @color/scarlet : @color/matcha_3}"
                    android:hint="@string/payment_amount"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={viewModel.amount}"
                    android:textColor="@color/matcha_3"
                    android:textColorHint="@{viewModel.invalidPayment != null ? @color/scarlet : @color/matcha_3}"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_payment_detail_type"
                style="@style/TextStyle2_matcha_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/middle_padding"
                android:layout_marginTop="@dimen/middle_padding"
                android:layout_marginEnd="@dimen/small_padding"
                android:text="@string/payment_payer"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_payment_detail_amount" />

            <Spinner
                android:id="@+id/spinner_payment_detail_payer"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_detail_edit"
                android:layout_marginTop="@dimen/middle_padding"
                android:prompt="@string/payment_select_payer"
                android:selectedItemPosition="@={viewModel.selectedPaymentTypePosition}"
                android:spinnerMode="dialog"
                android:contentDescription="@string/content_desc_payer"
                app:layout_constraintEnd_toEndOf="@+id/layout_payment_detail_amount"
                app:layout_constraintStart_toStartOf="@+id/layout_payment_detail_amount"
                app:layout_constraintTop_toBottomOf="@id/text_payment_detail_type" />

            <LinearLayout
                android:id="@+id/layout_payment_detail_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/middle_padding"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/spinner_payment_detail_payer"
                app:layout_constraintStart_toStartOf="@+id/spinner_payment_detail_payer"
                app:layout_constraintTop_toBottomOf="@id/spinner_payment_detail_payer">

                <RadioGroup
                    android:id="@+id/radio_group_payment_detail_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onCheckedChanged="@{viewModel::onTypeChanged}"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="@+id/to_cart_select_color_text"
                    app:layout_constraintTop_toBottomOf="@id/to_cart_select_color_text">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_self_payment"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="@dimen/largest_padding"
                        android:background="@drawable/payment_type_selector"
                        android:backgroundTint="@{viewModel.invalidPayment != null ? (viewModel.paymentType == `` ? @color/scarlet : @color/transparent) : @color/transparent}"
                        android:backgroundTintMode="screen"
                        android:button="@null"
                        android:fontFamily="@font/noto_sans"
                        android:letterSpacing="0.15"
                        android:text="@string/payment_type_self"
                        android:textAlignment="center"
                        android:textColor="@drawable/payment_type_text_selector"
                        android:textSize="16sp"
                        tools:ignore="TextContrastCheck" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_share_payment"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:background="@drawable/payment_type_selector"
                        android:backgroundTint="@{viewModel.invalidPayment != null ? (viewModel.paymentType == `` ? @color/scarlet : @color/transparent) : @color/transparent}"
                        android:backgroundTintMode="screen"
                        android:button="@null"
                        android:fontFamily="@font/noto_sans"
                        android:letterSpacing="0.15"
                        android:text="@string/payment_type_share"
                        android:textAlignment="center"
                        android:textColor="@drawable/payment_type_text_selector"
                        android:textSize="16sp"
                        tools:ignore="TextContrastCheck" />
                </RadioGroup>
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/btn_payment_detail_save"
                style="@style/TextStyle2_matcha_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/middle_padding"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/content_desc_submit_payment"
                android:onClick="@{() -> viewModel.prepareSubmitPayment()}"
                android:text="@string/plan_save"
                android:textAlignment="center"
                app:backgroundTint="@color/matcha_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:maxImageSize="36dp"
                app:tint="@color/matcha_6"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.status == LoadApiStatus.LOADING ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/uploading" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>